# vCardTool

./: .gitignore  CMakeLists.txt  README.md  vCardTool.sln
vCardTool/: CMakeLists.txt  DlgAbout.cpp  DlgAbout.h  RegHelper.cpp  RegHelper.h  WinMain.cpp  common.cpp  common.h  resource.h  vCard.cpp  vCard.h  vCardTool.aps  vCardTool.rc  vCardTool.vcxproj  vCardTool.vcxproj.filters  vCardTool_mingw.rc  vCardWnd.cpp  vCardWnd.h
vCardTool/Tim/: ClassEx.h  CommonCtrls.h  Dialog.cpp  Dialog.h  File.cpp  File.h  Http.cpp  Http.h  LinkCtrl.cpp  LinkCtrl.h  Rect.h  SException.cpp  SException.h  TString.cpp  TString.h  Window.h  tim.h
